--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -18,10 +18,31 @@
     border: 1px solid rgba(255,255,255,0.1);
     backdrop-filter: blur(10px);
     display: flex;
-    position : absolute;
-    top : 0%;
     width : 100vw;
-    height : auto;
+    justify-content: space-between;
+}
+
+.nav-bar-container-fixed{
+    border-radius: 5px;
+    color: var(--light);
+    background-color: rgba(255,255,255,0.1);
+    border: 1px solid rgba(255,255,255,0.1);
+    backdrop-filter: blur(10px);
+    display: flex;
+    width : 100vw;
+    justify-content: space-between;
+    position: fixed;
+    top : 0;
+}
+
+.nav-bar-container-free{
+    border-radius: 5px;
+    color: var(--light);
+    background-color: rgba(255,255,255,0.1);
+    border: 1px solid rgba(255,255,255,0.1);
+    backdrop-filter: blur(10px);
+    display: flex;
+    width : 100vw;
 }
 
 .right-nav-bar{
